feat(MastheadNav): convert masthead to pf4

--- a/app/ui/src/index.html
+++ b/app/ui/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-us" class="layout-pf layout-pf-fixed">
+<html lang="en-us">
 
 <head>
   <meta charset="utf-8">
@@ -18,7 +18,7 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 
-<body class="cards-pf">
+<body>
   <syndesis-root>
     <div class="spinner spinner-lg"></div>
   </syndesis-root>
